--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,10 +1,35 @@
 <% extend 'html/layout/_main.html' %>
 
-<section id="main">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-9"><h2>Main</h2></div>
-      <div class="col-md-3"><h2>Sidebar</h2></div>
+<!-- ABOUT ME -->
+<section id="about" class="block-section">
+  <div class="clearfix my-profile">
+    <div class="my-pict" >
+      <div class="overfly">
+        <div class="text-botttom">
+          <h2 class="text-uppercase color-dark text-bold">nhi Thai</h2>
+          <h5 class="text-uppercase color-dark font-alt ">Life is an adventure. Take risks</h5>
+        </div>
+      </div>
+    </div>
+    <div class="my-desc">
+      <div class="bg-secondary clearfix">
+        <div class="inner-text">
+          <p >My name is Nhi, I am an aspiring web developer. I love developing clean and elegant dynamic websites and web applications. I've learned languages such as HTML, CSS, JavaScript, PHP and continually learn much more.</p>
+          <p class="no-margin">I have worked with popular frameworks such as Bootstrap and libraries such as jQuery. Check out my portfolio and if you're interested, check out my contact area and shoot me an email.</p>
+        </div>
+      </div>
+      <div class="bg-dark clearfix">
+        <div class="inner-text">
+          <p class="no-margin color-light ">
+            <strong class="fix-width-100"><i class="fa fa-calendar margin-right-5"></i> Birthdate</strong> : 19/05/1988<br/>
+            <strong class="fix-width-100"><i class="fa fa-phone margin-right-5"></i> Phone</strong> : 0974 833 783<br/>
+            <strong class="fix-width-100"><i class="fa fa-envelope margin-right-5"></i> Email</strong> : nhithai88@gmail.com<br/>
+            <strong class="fix-width-100"><i class="fa fa-globe margin-right-5"></i> Website</strong> :www.amyb.xyz <br/>
+            <strong class="fix-width-100"><i class="fa fa-location-arrow margin-right-5"></i> Adresse</strong> : 32 To Ky Street, Trung My Tay Ward, District 12.<br/>
+          </p>
+        </div>
+      </div>
     </div>
   </div>
-</section>
+</section><!-- END ABOUT ME -->
+
