--- a/src/html/shared/_footer.html
+++ b/src/html/shared/_footer.html
@@ -1,5 +1,22 @@
-<footer>
+<footer class="main-footer">
   <div class="container">
-    <h1 class="text-center">Footer</h1>
+    <div class="folow-me">
+      Follow Me On
+    </div>
+    <ul class="list-inline social-links text-center">
+      <li>
+        <a href="https://www.facebook.com/nhithai1905"  data-toggle="tooltip"  data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/nhi-thai-b69b7535/"  data-toggle="tooltip"  data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+      </li>
+      <li>
+        <a href="https://github.com/nhidev"  data-toggle="tooltip"  data-placement="top" title="Github"><i class="fa fa-github"></i></a>
+      </li>
+    </ul>
+    <p class="text-center no-margin">
+      NhiThai - All Rights Reserved &COPY; 2017
+    </p>
+    <a href="#home" class="back-to-top"><i class="fa fa-angle-double-up" ></i></a>
   </div>
 </footer>
