--- a/src/html/shared/_header.html
+++ b/src/html/shared/_header.html
@@ -1,5 +1,49 @@
-<header>
-  <div class="container">
-    <h1 class="text-center">Header</h1>
+<header class="main-header" id="home">
+  <div class="content-table header-content-fixed ">
+    <div class="v-content">
+      <div class="container">
+        <h1 class="text-uppercase color-dark name">i’m Nhi Thai</h1>
+        <h4 class="text-uppercase color-dark font-alt job"><span id="typed" class="typed">Frontend Developer</span><span class="typed-cursor">.</span></h4>
+      </div>
+    </div>
   </div>
+  <!-- Main navbar -->
+  <div class="menu-area">
+    <div class="toogle-bars">
+      <a href="#menu-collapse" data-toggle="collapse" class="collapsed"><i class="fa fa-bars ic-open"></i> <i class="fa fa-remove ic-close"></i> MENU</a>
+    </div>
+    <div class="menu-collapse collapse" id="menu-collapse">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <ul class="breadcrumb main-nav no-space">
+              <li class="link-inpage"><a href="#contact" id="hireme-tab" class="link-inpage"><i class="fa fa-briefcase"></i> Hire Me Now</a></li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <ul class="breadcrumb main-nav nav">
+              <li class="active"><a href="#home" class="link-inpage">Home</a></li>
+              <li ><a href="#about" class="link-inpage">About</a></li>
+              <li ><a href="#resume" class="link-inpage">Resume</a></li>
+              <li ><a href="#portfolio" class="link-inpage">Portfolio</a></li>
+              <li ><a href="#contact" id="contact-tab" class="link-inpage">Contact</a></li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <ul class="breadcrumb main-nav no-space">
+              <li>
+                <a href="https://www.facebook.com/nhithai1905" ><i class="fa fa-facebook"></i></a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/in/nhi-thai-b69b7535/" ><i class="fa fa-linkedin"></i></a>
+              </li>
+              <li>
+                <a href="https://github.com/nhidev" ><i class="fa fa-github"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div><!-- End Main navbar -->
 </header>
