--- a/src/html/shared/_header.html
+++ b/src/html/shared/_header.html
@@ -24,8 +24,8 @@
             <ul class="breadcrumb main-nav nav">
               <li class="active"><a href="#home" class="link-inpage">Home</a></li>
               <li ><a href="#about" class="link-inpage">About</a></li>
-              <li ><a href="#resume" class="link-inpage">Resume</a></li>
-              <li ><a href="#portfolio" class="link-inpage">Portfolio</a></li>
+              <li ><a href="#work" class="link-inpage">Work</a></li>
+              <li ><a href="category.html" class="link-inpage">Blog</a></li>
               <li ><a href="#contact" id="contact-tab" class="link-inpage">Contact</a></li>
             </ul>
           </div>
