--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,7 +24,7 @@
             <strong class="fix-width-100"><i class="fa fa-calendar margin-right-5"></i> Birthdate</strong> : 19/05/1988<br/>
             <strong class="fix-width-100"><i class="fa fa-phone margin-right-5"></i> Phone</strong> : 0974 833 783<br/>
             <strong class="fix-width-100"><i class="fa fa-envelope margin-right-5"></i> Email</strong> : nhithai88@gmail.com<br/>
-            <strong class="fix-width-100"><i class="fa fa-globe margin-right-5"></i> Website</strong> :www.amyb.xyz <br/>
+            <strong class="fix-width-100"><i class="fa fa-globe margin-right-5"></i> Website</strong> : www.amyb.xyz <br/>
             <strong class="fix-width-100"><i class="fa fa-location-arrow margin-right-5"></i> Adresse</strong> : 32 To Ky Street, Trung My Tay Ward, District 12.<br/>
           </p>
         </div>
@@ -32,4 +32,90 @@
     </div>
   </div>
 </section><!-- END ABOUT ME -->
+
+<!--CATEGORY-->
+<section id="category" class="block-section">
+  <!--CATEGORY TITLE-->
+  <div class=" shape-bottom">
+    <div class="bg-secondary block-title">
+      <div class="container">
+        <h2 class="text-uppercase color-dark text-bold no-margin">Lastest Post</h2>
+        <div class="title-icon"> <i class="fa fa-inbox"></i> </div>
+      </div>
+    </div>
+  </div><!--END CATEGORY TITLE-->
+
+  <!--Posts list-->
+  <div class="block-page" >
+    <div class="container-medium">
+      <div class="flex-container">
+        <figure class="flex-box">
+          <img src="images/blog/p1.jpg" alt="">
+          <figcaption>
+            <h2><a href="#" class="link-to" title="">From Me</a></h2>
+          </figcaption>
+        </figure>
+        <figure class="flex-box">
+          <img src="images/blog/p2.jpg" alt="">
+          <figcaption>
+            <h2><a href="#" class="link-to" title="">Kirara</a></h2>
+          </figcaption>
+        </figure>
+
+        <figure class="flex-box">
+          <img src="images/blog/p3.jpg" alt="">
+          <figcaption>
+            <h2><a href="#" class="link-to" title="">Feel Note</a></h2>
+          </figcaption>
+        </figure>
+
+        <figure class="flex-box">
+          <img src="images/blog/p4.jpg" alt="">
+          <figcaption>
+            <h2><a href="#" class="link-to" title="">TravelPass</a></h2>
+          </figcaption>
+        </figure>
+
+        <figure class="flex-box">
+          <img src="images/blog/p5.jpg" alt="">
+          <figcaption>
+            <h2><a href="#" class="link-to" title="">Snap</a></h2>
+          </figcaption>
+        </figure>
+
+        <figure class="flex-box">
+          <img src="images/blog/p6.jpg" alt="">
+          <figcaption>
+            <h2><a href="#" class="link-to" title="">Sometimes</a></h2>
+          </figcaption>
+        </figure>
+
+        <figure class="flex-box">
+          <img src="images/blog/p7.jpg" alt="">
+          <figcaption>
+            <h2><a href="#" class="link-to" title="">Animal</a></h2>
+          </figcaption>
+        </figure>
+
+        <figure class="flex-box">
+          <img src="images/blog/p8.jpg" alt="">
+          <figcaption>
+            <h2><a href="#" class="link-to" title="">The Girl + The Bull</a></h2>
+          </figcaption>
+        </figure>
+        <figure class="flex-box">
+          <img src="images/blog/p9.jpg" alt="">
+          <figcaption>
+            <h2><a href="#" class="link-to" title="">The Angkas</a></h2>
+          </figcaption>
+        </figure>
+
+      </div>
+      <!--BTN SHOW MORE-->
+      <div class="box-btn-more"><a href="category.html" class="btn btn-link" id="more-blog"> Show More</a></div><!--END BTN SHOW MORE-->
+    </div>
+  </div><!--END List post-->
+
+</section><!--END CATEGORY-->
+
 
