--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <div class="v-content">
       <div class="container">
         <h1 class="text-uppercase color-dark name">i’m Nhi Thai</h1>
-        <h4 class="text-uppercase color-dark font-alt job"><span id="typed" class="typed">Frontend Developer</span><span class="typed-cursor">.</span></h4>
+        <h4 class="text-uppercase color-dark font-alt job"><span id="typed" class="typed">Freelancer</span><span class="typed-cursor">.</span></h4>
       </div>
     </div>
   </div>
@@ -31,18 +31,12 @@
     <div class="menu-collapse collapse" id="menu-collapse">
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
-            <ul class="breadcrumb main-nav no-space">
-              <li class="link-inpage"><a href="#contact" id="hireme-tab" class="link-inpage"><i class="fa fa-briefcase"></i> Hire Me Now</a></li>
-            </ul>
-          </div>
-          <div class="col-md-6">
+          <div class="col-md-6 col-md-offset-3">
             <ul class="breadcrumb main-nav nav">
-              <li class="active"><a href="#home" class="link-inpage">Home</a></li>
-              <li ><a href="#about" class="link-inpage">About</a></li>
-              <li ><a href="#resume" class="link-inpage">Resume</a></li>
-              <li ><a href="#portfolio" class="link-inpage">Portfolio</a></li>
-              <li ><a href="#contact" id="contact-tab" class="link-inpage">Contact</a></li>
+              <li class="active"><a href="/" class="link-inpage">Home</a></li>
+              <li ><a href="project.html" class="link-inpage">Work</a></li>
+              <li ><a href="category.html" class="link-inpage">Blog</a></li>
+              <li ><a href="contact.html" id="contact-tab" class="link-inpage">Contact</a></li>
             </ul>
           </div>
           <div class="col-md-3">
@@ -62,7 +56,8 @@
       </div>
     </div>
   </div><!-- End Main navbar -->
-</header>    
+</header>
+    
 <!-- ABOUT ME -->
 <section id="about" class="block-section">
   <div class="clearfix my-profile">
@@ -87,7 +82,7 @@
             <strong class="fix-width-100"><i class="fa fa-calendar margin-right-5"></i> Birthdate</strong> : 19/05/1988<br/>
             <strong class="fix-width-100"><i class="fa fa-phone margin-right-5"></i> Phone</strong> : 0974 833 783<br/>
             <strong class="fix-width-100"><i class="fa fa-envelope margin-right-5"></i> Email</strong> : nhithai88@gmail.com<br/>
-            <strong class="fix-width-100"><i class="fa fa-globe margin-right-5"></i> Website</strong> :www.amyb.xyz <br/>
+            <strong class="fix-width-100"><i class="fa fa-globe margin-right-5"></i> Website</strong> : www.amyb.xyz <br/>
             <strong class="fix-width-100"><i class="fa fa-location-arrow margin-right-5"></i> Adresse</strong> : 32 To Ky Street, Trung My Tay Ward, District 12.<br/>
           </p>
         </div>
@@ -95,6 +90,92 @@
     </div>
   </div>
 </section><!-- END ABOUT ME -->
+
+<!--CATEGORY-->
+<section id="category" class="block-section">
+  <!--CATEGORY TITLE-->
+  <div class=" shape-bottom">
+    <div class="bg-secondary block-title">
+      <div class="container">
+        <h2 class="text-uppercase color-dark text-bold no-margin">Lastest Post</h2>
+        <div class="title-icon"> <i class="fa fa-inbox"></i> </div>
+      </div>
+    </div>
+  </div><!--END CATEGORY TITLE-->
+
+  <!--Posts list-->
+  <div class="block-page" >
+    <div class="container-medium">
+      <div class="flex-container">
+        <figure class="flex-box">
+          <img src="images/blog/p1.jpg" alt="">
+          <figcaption>
+            <h2><a href="#" class="link-to" title="">From Me</a></h2>
+          </figcaption>
+        </figure>
+        <figure class="flex-box">
+          <img src="images/blog/p2.jpg" alt="">
+          <figcaption>
+            <h2><a href="#" class="link-to" title="">Kirara</a></h2>
+          </figcaption>
+        </figure>
+
+        <figure class="flex-box">
+          <img src="images/blog/p3.jpg" alt="">
+          <figcaption>
+            <h2><a href="#" class="link-to" title="">Feel Note</a></h2>
+          </figcaption>
+        </figure>
+
+        <figure class="flex-box">
+          <img src="images/blog/p4.jpg" alt="">
+          <figcaption>
+            <h2><a href="#" class="link-to" title="">TravelPass</a></h2>
+          </figcaption>
+        </figure>
+
+        <figure class="flex-box">
+          <img src="images/blog/p5.jpg" alt="">
+          <figcaption>
+            <h2><a href="#" class="link-to" title="">Snap</a></h2>
+          </figcaption>
+        </figure>
+
+        <figure class="flex-box">
+          <img src="images/blog/p6.jpg" alt="">
+          <figcaption>
+            <h2><a href="#" class="link-to" title="">Sometimes</a></h2>
+          </figcaption>
+        </figure>
+
+        <figure class="flex-box">
+          <img src="images/blog/p7.jpg" alt="">
+          <figcaption>
+            <h2><a href="#" class="link-to" title="">Animal</a></h2>
+          </figcaption>
+        </figure>
+
+        <figure class="flex-box">
+          <img src="images/blog/p8.jpg" alt="">
+          <figcaption>
+            <h2><a href="#" class="link-to" title="">The Girl + The Bull</a></h2>
+          </figcaption>
+        </figure>
+        <figure class="flex-box">
+          <img src="images/blog/p9.jpg" alt="">
+          <figcaption>
+            <h2><a href="#" class="link-to" title="">The Angkas</a></h2>
+          </figcaption>
+        </figure>
+
+      </div>
+      <!--BTN SHOW MORE-->
+      <div class="box-btn-more"><a href="category.html" class="btn btn-link" id="more-blog"> Show More</a></div><!--END BTN SHOW MORE-->
+    </div>
+  </div><!--END List post-->
+
+</section><!--END CATEGORY-->
+
 
     <footer class="main-footer">
   <div class="container">
