--- a/src/html/shared/_header.html
+++ b/src/html/shared/_header.html
@@ -3,7 +3,7 @@
     <div class="v-content">
       <div class="container">
         <h1 class="text-uppercase color-dark name">i’m Nhi Thai</h1>
-        <h4 class="text-uppercase color-dark font-alt job"><span id="typed" class="typed">Frontend Developer</span><span class="typed-cursor">.</span></h4>
+        <h4 class="text-uppercase color-dark font-alt job"><span id="typed" class="typed">Freelancer</span><span class="typed-cursor">.</span></h4>
       </div>
     </div>
   </div>
@@ -15,18 +15,12 @@
     <div class="menu-collapse collapse" id="menu-collapse">
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
-            <ul class="breadcrumb main-nav no-space">
-              <li class="link-inpage"><a href="#contact" id="hireme-tab" class="link-inpage"><i class="fa fa-briefcase"></i> Hire Me Now</a></li>
-            </ul>
-          </div>
-          <div class="col-md-6">
+          <div class="col-md-6 col-md-offset-3">
             <ul class="breadcrumb main-nav nav">
-              <li class="active"><a href="#home" class="link-inpage">Home</a></li>
-              <li ><a href="#about" class="link-inpage">About</a></li>
-              <li ><a href="#work" class="link-inpage">Work</a></li>
+              <li class="active"><a href="/" class="link-inpage">Home</a></li>
+              <li ><a href="project.html" class="link-inpage">Work</a></li>
               <li ><a href="category.html" class="link-inpage">Blog</a></li>
-              <li ><a href="#contact" id="contact-tab" class="link-inpage">Contact</a></li>
+              <li ><a href="contact.html" id="contact-tab" class="link-inpage">Contact</a></li>
             </ul>
           </div>
           <div class="col-md-3">
